--- a/res/layout/activity_yue_lu_login_registered.xml
+++ b/res/layout/activity_yue_lu_login_registered.xml
@@ -50,7 +50,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/login_registered_text_password"
         android:layout_centerHorizontal="true"
-        android:hint="@string/password" />
+        android:hint="@string/password"
+        android:inputType="textPassword" />
 
     <RelativeLayout
         android:id="@+id/login_registered_relative_layout"
@@ -108,5 +109,34 @@
         android:paddingBottom="5dp"
         android:paddingTop="5dp"
         android:text="@string/register" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/login_registered_button_registered"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="5dp" >
+
+        <TextView
+            android:id="@+id/login_register_text_qq_login"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/QQ_login"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/login_register_text_web_login"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/weibo_login"
+            android:textSize="12sp" />
+    </LinearLayout>
 
 </RelativeLayout>
