--- a/res/drawable-hdpi/selector_friends_up.xml
+++ b/res/drawable-hdpi/selector_friends_up.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" 
-    android:shape="rectangle">
-    <solid 
-        android:color="@color/white"/>
-    <corners
-        android:radius="10dp"
-    />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle" >
+
+    <solid android:color="@color/write" />
+
+    <corners android:radius="10dp" />
 
 </shape>
