--- a/res/drawable-hdpi/selector_listview.xml
+++ b/res/drawable-hdpi/selector_listview.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android" >
-     <item android:state_selected="false"  android:drawable="@color/blue"/>
-    <item android:state_selected="true" android:drawable="@color/white"/>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:drawable="@color/blue" android:state_selected="false"/>
+    <item android:drawable="@color/write" android:state_selected="true"/>
+
 </selector>
