--- a/res/layout/message_listview.xml
+++ b/res/layout/message_listview.xml
@@ -22,10 +22,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:text="@string/zhao" 
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="5dp"
-              android:layout_marginLeft="20dp"
-            android:maxLength="16"/>
+            android:maxLength="16"
+            android:text="@string/zhao" />
 
         <TextView
             android:id="@+id/left_bot"
@@ -33,57 +33,54 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:text="@string/duola"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="20dp"
-             android:maxLength="16"
-             />
+            android:maxLength="16"
+            android:text="@string/duola" />
 
-        
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/beizhu" />
 
-       
-       <View 
-           android:layout_width="match_parent"
-           android:layout_height="1dp"
-           android:background="@color/beizhu"
-           android:layout_alignParentBottom="true"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:orientation="vertical"
-               android:layout_marginTop="5dp"
-                  android:layout_marginBottom="5dp"
-                  android:layout_marginRight="20dp">
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="5dp"
+            android:orientation="vertical" >
+
             <TextView
-            android:id="@+id/right_top"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/msg_time" 
-           android:gravity="center_horizontal"/>
-         <RelativeLayout 
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            
-             >
-              <ImageView 
-            android:id="@+id/iv_numb"
-                  android:layout_width="12dp"
-                  android:layout_height="12dp"
-                  android:background="@drawable/rub_course_message_icon_point"
-                  android:layout_centerInParent="true"
-           />
-               <TextView
-            android:id="@+id/right_bot"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/num" 
-            android:textColor="@color/white"
-            android:layout_centerInParent="true"
-           />
-         </RelativeLayout>
-         </LinearLayout>
+                android:id="@+id/right_top"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="@string/msg_time" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal" >
+
+                <ImageView
+                    android:id="@+id/iv_numb"
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/rub_course_message_icon_point" />
+
+                <TextView
+                    android:id="@+id/right_bot"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="@string/num"
+                    android:textColor="@color/write" />
+            </RelativeLayout>
+        </LinearLayout>
     </RelativeLayout>
 
 </LinearLayout>
