--- a/res/layout/activity_yue_lu_main.xml
+++ b/res/layout/activity_yue_lu_main.xml
@@ -5,129 +5,161 @@
     android:background="@android:color/white"
     android:orientation="vertical" >
 
+    <!-- 引入标题 -->
+
     <include
         android:id="@+id/main_title"
         layout="@layout/title_navigation_bar" />
-    <ScrollView
+
+    <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" >
+        android:layout_height="wrap_content"
+      
+        android:orientation="vertical" >
+
+        <View
+            android:id="@+id/main_view_announcement"
+            android:layout_width="fill_parent"
+            android:layout_height="80dp" />
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:background="@android:color/white"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp" >
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/main_text_recommended"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
+                    android:text="@string/tuijiankaihei"
+                    android:textColor="@android:color/black"
+                    android:textSize="14sp" />
+
+                <ImageView
+                    android:id="@+id/main_image_recommended_user1"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/head_shape_round_stroke"
+                    android:contentDescription="@drawable/ic_launcher"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:src="@drawable/ic_launcher" />
+
+                <ImageView
+                    android:id="@+id/main_image_recommended_user2"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/head_shape_round_stroke"
+                    android:contentDescription="@drawable/ic_launcher"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:src="@drawable/ic_launcher" />
+
+                <ImageView
+                    android:id="@+id/main_image_recommended_user3"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/head_shape_round_stroke"
+                    android:contentDescription="@drawable/ic_launcher"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:src="@drawable/ic_launcher" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/main_text_click_for_more"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:text="@string/onclickformore"
+                android:textSize="12sp" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <View
-                android:id="@+id/main_view_announcement"
-                android:layout_width="fill_parent"
-                android:layout_height="80dp" />
+            android:background="@android:color/white"
+            android:baselineAligned="false"
+            android:orientation="horizontal" >
 
             <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="50dp"
-                android:background="@android:color/white"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_rounded_corners_and_solid"
                 android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp" >
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal" >
-
-                    <TextView
-                        android:id="@+id/main_text_recommended"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/tuijiankaihei"
-                        android:textColor="@android:color/black"
-                        android:textSize="14sp" />
-
-                    <ImageView
-                        android:id="@+id/main_image_recommended_user1"
-                        android:layout_width="45dp"
-                        android:layout_height="45dp"
-                        android:contentDescription="@drawable/ic_launcher"
-                        android:paddingLeft="5dp"
-                        android:paddingRight="5dp"
-                        android:src="@drawable/ic_launcher" />
-
-                    <ImageView
-                        android:id="@+id/main_image_recommended_user2"
-                        android:layout_width="45dp"
-                        android:layout_height="45dp"
-                        android:contentDescription="@drawable/ic_launcher"
-                        android:paddingLeft="5dp"
-                        android:paddingRight="5dp"
-                        android:src="@drawable/ic_launcher" />
-
-                    <ImageView
-                        android:id="@+id/main_image_recommended_user3"
-                        android:layout_width="45dp"
-                        android:layout_height="45dp"
-                        android:contentDescription="@drawable/ic_launcher"
-                        android:paddingLeft="5dp"
-                        android:paddingRight="5dp"
-                        android:src="@drawable/ic_launcher" />
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/main_text_click_for_more"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
-                    android:text="@string/onclickformore"
-                    android:textSize="12sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/white"
                 android:orientation="horizontal" >
 
                 <TextView
                     android:id="@+id/main_text_sever"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:layout_weight="1"
-                    android:background="@drawable/button_rounded_corners_and_solid"
-                    android:drawableEnd="@drawable/ic_launcher"
-                    android:drawableRight="@drawable/ic_launcher"
                     android:gravity="center"
                     android:padding="5dp"
                     android:text="@string/server" />
 
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
+                    android:contentDescription="@drawable/ic_launcher"
+                    android:src="@drawable/ic_launcher" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_rounded_corners_and_solid"
+                android:gravity="center_vertical"
+                android:orientation="horizontal" >
+
                 <TextView
-                    android:id="@+id/main_text_dan"
+                    android:id="@+id/main_text_grade"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:layout_weight="1"
-                    android:background="@drawable/button_rounded_corners_and_solid"
-                    android:drawableEnd="@drawable/ic_launcher"
-                    android:drawableRight="@drawable/ic_launcher"
                     android:gravity="center"
                     android:padding="5dp"
                     android:text="@string/grade" />
-            </LinearLayout>
 
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="2dp" />
-
-            <LinearLayout
-                android:id="@+id/main_layout_posts"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
+                    android:contentDescription="@drawable/ic_launcher"
+                    android:src="@drawable/ic_launcher" />
             </LinearLayout>
         </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="2dp" />
+
+    <ListView
+        android:id="@+id/main_list_posts"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+    </ListView>
 
 </LinearLayout>
