--- a/res/drawable/text_stroke.xml
+++ b/res/drawable/text_stroke.xml
@@ -3,6 +3,6 @@
 
     <stroke
         android:width="1px"
-        android:color="@color/gray" />
+        android:color="#BBBBBB" />
 <solid android:color="@color/write"/>
 </shape>
