--- a/res/layout/title_navigation_bar.xml
+++ b/res/layout/title_navigation_bar.xml
@@ -4,19 +4,33 @@
     android:layout_height="50dp"
     android:background="@android:color/white" >
 
+    <!-- 返回键按钮 -->
+
     <ImageView
         android:id="@+id/title_navigation_back_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:contentDescription="@drawable/ic_launcher"
         android:paddingBottom="@dimen/activity_navigation_bar_paddingtop"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_navigation_bar_paddingtop"
+        android:src="@drawable/rub_course_back_icon"
         android:visibility="gone" />
+
+    <LinearLayout
+        android:id="@+id/title_navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:paddingBottom="@dimen/activity_navigation_bar_paddingtop"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/activity_navigation_bar_paddingtop"
+        android:visibility="gone" />
+    <!-- 标题 -->
 
     <TextView
         android:id="@+id/title_navigation_text_title"
@@ -26,6 +40,8 @@
         android:padding="@dimen/activity_navigation_bar_paddingtop"
         android:textSize="@dimen/activity_navigation_bar_title_sise"
         android:textStyle="bold" />
+
+    <!-- 右标题 -->
 
     <TextView
         android:id="@+id/title_navigation_text_right_title"
