--- a/res/layout/message_listview.xml
+++ b/res/layout/message_listview.xml
@@ -1,84 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="wrap_content"
     android:orientation="horizontal" >
 
     <ImageView
-        android:id="@+id/image"
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:layout_marginLeft="15dp"
         android:layout_weight="1"
-        android:background="@drawable/mm" />
+        android:gravity="center"
+        android:src="@drawable/icon" />
 
     <RelativeLayout
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="5" >
+        android:layout_height="50dp"
+        android:layout_weight="4" >
 
         <TextView
-            android:id="@+id/left_top"
+            android:id="@+id/tv_childname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="5dp"
-            android:maxLength="16"
-            android:text="@string/zhao" />
+            android:layout_marginLeft="10dp"
+            android:padding="2dp"
+            android:text="赵日天" />
 
         <TextView
-            android:id="@+id/left_bot"
+            android:id="@+id/tv_sign"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="20dp"
-            android:maxLength="16"
-            android:text="@string/duola" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_alignParentBottom="true"
-            android:background="@color/beizhu" />
+            android:layout_marginLeft="10dp"
+            android:padding="2dp"
+            android:text="玩得好开心" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="5dp"
-            android:orientation="vertical" >
+            android:layout_marginRight="30dp"
+            android:orientation="vertical"
+            android:gravity="center" >
 
             <TextView
-                android:id="@+id/right_top"
+                android:id="@+id/tv_status"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text="@string/msg_time" />
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="20:08" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:layout_gravity="center_horizontal" >
 
                 <ImageView
-                    android:id="@+id/iv_numb"
-                    android:layout_width="12dp"
-                    android:layout_height="12dp"
-                    android:layout_centerInParent="true"
-                    android:background="@drawable/rub_course_message_icon_point" />
-
-                <TextView
-                    android:id="@+id/right_bot"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:text="@string/num"
-                    android:textColor="@color/write" />
+                    android:background="@drawable/red_pointer" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:gravity="center"
+                    android:text="1"
+                    android:textColor="@color/white" />
             </RelativeLayout>
         </LinearLayout>
     </RelativeLayout>
