--- a/res/layout/messages.xml
+++ b/res/layout/messages.xml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical" >
-    <EditText 
+  <EditText 
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:hint="搜索"
         android:padding="10dp"
         android:layout_margin="30dp"
         android:background="@drawable/et_bg"/>
-    <ExpandableListView 
-        android:id="@+id/expand"
+    <ListView 
+        android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:groupIndicator="@null"
         android:divider="@null"
         android:dividerHeight="5dp"
-        >
-        
-    </ExpandableListView>
-
+        />
 </LinearLayout>
