--- a/res/layout/activity_yue_lu_post_details.xml
+++ b/res/layout/activity_yue_lu_post_details.xml
@@ -11,7 +11,9 @@
     <ListView
         android:id="@+id/post_details_list_view"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content" 
+        android:divider="@color/gray"
+        android:dividerHeight="10dp">
     </ListView>
 
     <TextView
