--- a/res/layout/actvity_yue_lu_personal_post.xml
+++ b/res/layout/actvity_yue_lu_personal_post.xml
@@ -72,6 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
+                android:paddingTop="1dp"
                 android:text="@string/yang" />
 
             <!-- 浏览量 -->
