--- a/res/layout/list_view_recommend.xml
+++ b/res/layout/list_view_recommend.xml
@@ -4,54 +4,70 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:orientation="horizontal" >
-   <!-- 玩家头像 -->
-    <ImageView 
+
+    <!-- 玩家头像 -->
+
+    <ImageView
         android:id="@+id/recommend_image_user_head"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@drawable/ic_launcher"
-        />
-    
-	<LinearLayout 
-	    android:layout_width="0dp"
-	    android:layout_height="wrap_content"
-	    android:layout_weight="1"
-	    android:orientation="vertical"
-	    android:padding="10dp"
-	    android:layout_gravity="center_vertical">
-	    <!-- 玩家昵称 -->
-	    <TextView 
-	         android:id="@+id/recommend_text_user_name"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:textSize="14sp"
-	        android:textStyle="bold"
-	        />
-	  <!-- 玩家大区 段位 -->
-	    <TextView 
-	         android:id="@+id/recommend_text_user_area"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:textSize="12sp"
-	        android:textStyle="bold"
-	        />
-	   <!-- 玩家发帖 -->
-	    <TextView 
-	         android:id="@+id/recommend_text_user_message"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:textSize="12sp"
-	        android:textStyle="bold"
-	        />
-	</LinearLayout>
-	<!-- 留言图标 -->
-	<ImageView 
-	    android:id="@+id/recommend_image_message_icon"
-	    android:layout_width="wrap_content"
-	    android:padding="10dp"
-	    android:layout_marginRight="20dp"
-	    android:layout_marginEnd="20dp"
-	    android:layout_height="wrap_content"
-	    android:contentDescription="@drawable/ic_launcher"
-	    />
+        android:contentDescription="@drawable/ic_launcher" />
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:padding="10dp" >
+
+        <!-- 玩家昵称 -->
+
+        <TextView
+            android:id="@+id/recommend_text_user_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+        <!-- 玩家大区 段位 -->
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/recommend_text_user_area"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/recommend_text_user_dan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:textSize="12sp" />
+        </LinearLayout>
+        <!-- 玩家发帖 -->
+
+        <TextView
+            android:id="@+id/recommend_text_user_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp" />
+    </LinearLayout>
+    <!-- 留言图标 -->
+
+    <ImageView
+        android:id="@+id/recommend_image_message_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:contentDescription="@drawable/iconfont_621"
+        android:padding="10dp"
+        android:src="@drawable/iconfont_621" />
+
 </LinearLayout>
