--- a/res/layout/fragment_text.xml
+++ b/res/layout/fragment_text.xml
@@ -12,6 +12,33 @@
         android:orientation="vertical" >
     </android.support.v4.view.ViewPager>
 
+    <RelativeLayout
+        android:id="@+id/fragment_text_post_share"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
+        android:visibility="gone">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/fragment_text_post"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_launcher" />
+
+            <ImageView
+                android:id="@+id/fragment_text_share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/ic_launcher" />
+        </LinearLayout>
+    </RelativeLayout>
+
     <include
         android:id="@+id/fragment_main_selection_bar"
         layout="@layout/bottom_of_the_selection_bar" />
