--- a/res/layout/group.xml
+++ b/res/layout/group.xml
@@ -1,50 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_marginLeft="50dp"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginRight="30dp">
-    <ImageView 
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="50dp" >
+
+    <ImageView
         android:id="@+id/iv_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:background="@drawable/rub_course_descending_order_non_sel"/>
-    <TextView 
+        android:background="@drawable/rub_course_descending_order_non_sel" />
+
+    <TextView
         android:id="@+id/tv_groupname"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:text="约黑好友"
-        android:textSize="16sp"
-        android:gravity="center"
         android:layout_centerVertical="true"
-       android:layout_marginLeft="20dp"/>
-    <LinearLayout 
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:layout_centerVertical="true"
-    android:layout_alignParentRight="true"
-    android:gravity="center">
-    <TextView
-        android:id="@+id/tv_onlinenum"
+        android:layout_marginLeft="20dp"
+        android:gravity="center"
+        android:text="约黑好友"
+        android:textSize="16sp" />
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:text="20"
-        android:gravity="center"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="/"
-        android:gravity="center"/>
-    <TextView
-        android:id="@+id/tv_total"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="21"
-        android:gravity="center"/>
-        
-</LinearLayout>
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/tv_onlinenum"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="20" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="/" />
+
+        <TextView
+            android:id="@+id/tv_total"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="21" />
+    </LinearLayout>
+
 </RelativeLayout>
-
-
