--- a/res/layout/messages.xml
+++ b/res/layout/messages.xml
@@ -3,18 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
-  <EditText 
+
+    <EditText
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/et_bg"
         android:hint="搜索"
-        android:padding="10dp"
-        android:layout_margin="30dp"
-        android:background="@drawable/et_bg"/>
-    <ListView 
+        android:gravity="center"/>
+
+    <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@null"
-        android:dividerHeight="5dp"
-        />
+        android:dividerHeight="5dp" />
+
 </LinearLayout>
